# LC-Management-System

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/hierarchy/: common.cpp  common.h  date.cpp  date.h  shipment.cpp  shipment.h  supplier.cpp  supplier.h
src/menu/: menu_f.cpp  menu_f.h
src/utils/: manip_file.cpp  manip_file.h  manip_with_base.cpp  manip_with_base.h
